# qa-automation-framework

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  env.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: settings.py
docs/: architecture.md  requirements.json  traceability_matrix.csv  traceability_matrix.md
perf/: booking_load.js
scripts/: gen_traceability.py
src/: data_builders.py  price_calculator.py  schema_validator.py
tests/api/: conftest.py  schemas.py  test_booking_api.py
tests/api/clients/: booking_client.py
tests/bdd/: test_checkout_steps.py
tests/bdd/features/: checkout.feature
tests/ui/: conftest.py  test_cart.py  test_checkout.py  test_login.py
tests/ui/pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/unit/: test_data_builders.py  test_price_calculator.py  test_schema_validator.py
