[project]
name = "qa-automation-framework"
version = "1.0.0"
description = "Multi-layer test automation framework (UI E2E, REST API, unit) with requirements-to-tests traceability, inspired by critical-systems QA practices."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mohamed Kaouane", email = "mohamedkaouane2102@gmail.com" }]

dependencies = [
    "pytest>=8.2",
    "pytest-playwright>=0.5",
    "playwright>=1.45",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "pytest-bdd>=7.1",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "pytest-rerunfailures>=14.0",
    "pytest-html>=4.1",
    "allure-pytest>=2.13",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "black>=24.4"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length is handled by black

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
